build_log_ui_6.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:243: error: cannot find symbol
            AppDatabase db = AppDatabase.getInstance(this);
                                        ^
  symbol:   method getInstance(MainDashboardActivity)
  location: class AppDatabase
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:286: error: constructor IsoNetworkClient in class IsoNetworkClient cannot be applied to given types;
                IsoNetworkClient client = new IsoNetworkClient(ctx.ip, ctx.port);
                                          ^
  required: no arguments
  found:    String,int
  reason: actual and formal argument lists differ in length
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:322: error: constructor IsoNetworkClient in class IsoNetworkClient cannot be applied to given types;
                    IsoNetworkClient reversalClient = new IsoNetworkClient(ctx.ip, ctx.port);
                                                      ^
  required: no arguments
  found:    String,int
  reason: actual and formal argument lists differ in length
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:350: error: cannot find symbol
                String tid = config.getTid();
                                   ^
  symbol:   method getTid()
  location: variable config of type ConfigManager
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:351: error: cannot find symbol
                String mid = config.getMid();
                                   ^
  symbol:   method getMid()
  location: variable config of type ConfigManager
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:354: error: cannot find symbol
                String transmissionTime = TransactionContext.buildTransmissionDateTime7Now();
                                                            ^
  symbol:   method buildTransmissionDateTime7Now()
  location: class TransactionContext
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:355: error: cannot find symbol
                String localTime = TransactionContext.buildLocalTime12Now();
                                                     ^
  symbol:   method buildLocalTime12Now()
  location: class TransactionContext
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:364: error: cannot find symbol
                TransactionContext ctx = new TransactionContext.Builder(TxnType.PURCHASE)
                                                               ^
  symbol:   class Builder
  location: class TransactionContext
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:420: error: cannot find symbol
                    com.example.mysoftpos.utils.ConfigManager.getInstance(getApplicationContext()).incrementTidAndMid();
                                                                                                  ^
  symbol:   method incrementTidAndMid()
  location: class ConfigManager
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:243: error: cannot find symbol
              AppDatabase db = AppDatabase.getInstance(this);
                                          ^
    symbol:   method getInstance(MainDashboardActivity)
    location: class AppDatabase
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:286: error: constructor IsoNetworkClient in class IsoNetworkClient cannot be applied to given types;
                  IsoNetworkClient client = new IsoNetworkClient(ctx.ip, ctx.port);
                                            ^
    required: no arguments
    found:    String,int
    reason: actual and formal argument lists differ in length
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\MainDashboardActivity.java:322: error: constructor IsoNetworkClient in class IsoNetworkClient cannot be applied to given types;
                      IsoNetworkClient reversalClient = new IsoNetworkClient(ctx.ip, ctx.port);
                                                        ^
    required: no arguments
    found:    String,int
    reason: actual and formal argument lists differ in length
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:350: error: cannot find symbol
                  String tid = config.getTid();
                                     ^
    symbol:   method getTid()
    location: variable config of type ConfigManager
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:351: error: cannot find symbol
                  String mid = config.getMid();
                                     ^
    symbol:   method getMid()
    location: variable config of type ConfigManager
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:354: error: cannot find symbol
                  String transmissionTime = TransactionContext.buildTransmissionDateTime7Now();
                                                              ^
    symbol:   method buildTransmissionDateTime7Now()
    location: class TransactionContext
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:355: error: cannot find symbol
                  String localTime = TransactionContext.buildLocalTime12Now();
                                                       ^
    symbol:   method buildLocalTime12Now()
    location: class TransactionContext
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:364: error: cannot find symbol
                  TransactionContext ctx = new TransactionContext.Builder(TxnType.PURCHASE)
                                                                 ^
    symbol:   class Builder
    location: class TransactionContext
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\PurchaseCardActivity.java:420: error: cannot find symbol
                      com.example.mysoftpos.utils.ConfigManager.getInstance(getApplicationContext()).incrementTidAndMid();
                                                                                                    ^
    symbol:   method incrementTidAndMid()
    location: class ConfigManager
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  9 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 4s
19 actionable tasks: 1 executed, 18 up-to-date
